Add SBOM generation and vulnerability scanning
This commit adds comprehensive Software Bill of Materials (SBOM) generation
and vulnerability scanning capabilities to Leeway:

- Generate SBOMs for packages during build in multiple formats (CycloneDX, SPDX, Syft)
- Scan SBOMs for vulnerabilities using Grype
- Add new commands:
  - `leeway sbom export` to export SBOMs from built packages
  - `leeway sbom scan` to scan packages for vulnerabilities
- Configure SBOM generation and scanning in WORKSPACE.yaml
- Support vulnerability filtering with ignore rules at workspace and package levels
- Generate vulnerability reports in multiple formats (JSON, text, CycloneDX, SARIF)
- Add documentation in README.md with examples and configuration options

This feature helps identify and manage security vulnerabilities in the
software supply chain by providing visibility into package dependencies
and their known vulnerabilities.

--- a/WORKSPACE.yaml
+++ b/WORKSPACE.yaml
@@ -9,6 +9,13 @@ environmentManifest:
 provenance:
   enabled: true
   slsa: true
+sbom:
+  enabled: true
+  scanVulnerabilities: true
+  # failOn: ["critical", "high"]
+  # ignoreVulnerabilities:
+  #   - vulnerability: GHSA-265r-hfxg-fhmg
+  #     reason: "Not exploitable in our context"
 variants:
 - name: nogit
   srcs:
